build: Bump all deps and align on kotlin 1.6.10 / serialization 1.3.1